[tool.poetry]
name = "web_master_add_hosts"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
